--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@dafcoe/vue-collapsible-panel": "^0.2.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.26",
     "vue": "^3.2.13",
     "vuesax": "^4.0.1-alpha.25"
   },
