--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.26",
     "vue": "^3.2.13",
+    "vue3-burger-menu": "^1.1.1",
     "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
